--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     width: 100%;
     height: 60px;
     margin-top: -18px;
-    border-color: #cccccc;
+    border-color: #dddddd;
 }
 .name {
     color: #ffffff;
@@ -68,9 +68,10 @@ a:hover {
 }
 .info img {
     width: 200px;
-    height: 200px;
+    height: 170px;
     float: left;
     margin-right: 30px;
+    margin-bottom: 25px;
 }
 p {
     line-height: 30px;
@@ -127,7 +128,7 @@ footer #copy {
     width:200px;
     text-align: center;
     position: absolute;
-    bottom: 10px;
+    bottom: 30px;
 }
 /* contact form */
 .form {
@@ -143,4 +144,10 @@ button {
     width: 100px;
     height: 40px;
     background-color: #4aaaa5;
+}
+button:hover {
+    background-color: aquamarine;
+}
+button:active {
+    background-color: aqua;
 }
